# agimus-franka-ros2

./: CHANGELOG.md  CHANGELOG.rst  NOTICE  README.md  docker-compose.yml  flake.nix
.github/workflows/: ci.yml
agimus_franka_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
agimus_franka_bringup/config/: controllers.yaml
agimus_franka_bringup/launch/: agimus_franka.launch.py  cartesian_elbow_example_controller.launch.py  cartesian_orientation_example_controller.launch.py  cartesian_pose_example_controller.launch.py  cartesian_velocity_example_controller.launch.py  elbow_example_controller.launch.py  gravity_compensation_example_controller.launch.py  (+7 more)
agimus_franka_example_controllers/: CHANGELOG.rst  CMakeLists.txt  agimus_franka_example_controllers.xml  package.xml
agimus_franka_fr3_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
agimus_franka_fr3_moveit_config/config/: fr3_ros_controllers.yaml
agimus_franka_fr3_moveit_config/launch/: move_group.launch.py  moveit.launch.py
agimus_franka_fr3_moveit_config/srdf/: fr3_arm.srdf.xacro  fr3_arm.xacro
agimus_franka_fr3_moveit_config/test/: srdf_tests.py
agimus_franka_gazebo/: README.md
agimus_franka_gazebo/agimus_franka_ign_ros2_control/: CHANGELOG.rst  CMakeLists.txt  ign_hardware_plugins.xml  package.xml
agimus_franka_gazebo/agimus_franka_ign_ros2_control/include/ign_ros2_control/: ign_system.hpp  model_kdl.h
agimus_franka_gazebo/agimus_franka_ign_ros2_control/src/: ign_ros2_control_plugin.cpp
agimus_franka_gripper/: CHANGELOG.rst  CMakeLists.txt  package.xml
agimus_franka_gripper/config/: agimus_franka_gripper_node.yaml
agimus_franka_gripper/include/agimus_franka_gripper/: gripper_action_server.hpp
agimus_franka_gripper/launch/: gripper.launch.py
agimus_franka_gripper/src/: gripper_action_server.cpp
agimus_franka_hardware/: CHANGELOG.rst  CMakeLists.txt  agimus_franka_hardware.xml  package.xml
agimus_franka_hardware/include/agimus_franka_hardware/: agimus_franka_action_server.hpp  agimus_franka_executor.hpp  agimus_franka_hardware_interface.hpp  agimus_franka_param_service_server.hpp  model.hpp  robot.hpp
agimus_franka_hardware/src/: agimus_franka_action_server.cpp  agimus_franka_executor.cpp  agimus_franka_hardware_interface.cpp  agimus_franka_param_service_server.cpp  robot.cpp
agimus_franka_hardware/test/: CMakeLists.txt  agimus_franka_action_server_test.cpp  agimus_franka_hardware_cartesian_command_interface_test.cpp  agimus_franka_hardware_cartesian_command_interface_test.hpp  agimus_franka_hardware_interface_test.cpp  agimus_franka_robot_test.cpp  agimus_franka_robot_test.hpp  test_utils.hpp
agimus_franka_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
agimus_franka_robot_state_broadcaster/: CHANGELOG.rst  CMakeLists.txt  agimus_franka_robot_state_broadcaster.xml  package.xml
agimus_franka_robot_state_broadcaster/include/agimus_franka_robot_state_broadcaster/: agimus_franka_robot_state_broadcaster.hpp
agimus_franka_robot_state_broadcaster/src/: agimus_franka_robot_state_broadcaster.cpp  agimus_franka_robot_state_broadcaster_parameters.yaml
agimus_franka_robot_state_broadcaster/test/: agimus_franka_robot_state_broadcaster_parameters.yaml  test_agimus_franka_robot_state_broadcaster.cpp  test_load_agimus_franka_robot_state_broadcaster.cpp
agimus_franka_ros2/: CMakeLists.txt  package.xml
agimus_franka_semantic_components/: CHANGELOG.rst  CMakeLists.txt  package.xml
agimus_franka_semantic_components/include/agimus_franka_semantic_components/: agimus_franka_cartesian_pose_interface.hpp  agimus_franka_cartesian_velocity_interface.hpp  agimus_franka_robot_model.hpp  agimus_franka_robot_state.hpp  agimus_franka_semantic_component_interface.hpp
agimus_franka_semantic_components/src/: agimus_franka_cartesian_pose_interface.cpp  agimus_franka_cartesian_velocity_interface.cpp  agimus_franka_robot_model.cpp  agimus_franka_robot_state.cpp  agimus_franka_semantic_component_interface.cpp  translation_utils.cpp  translation_utils.hpp
agimus_franka_semantic_components/test/: agimus_franka_cartesian_pose_interface_test.cpp  agimus_franka_cartesian_pose_interface_test.hpp  agimus_franka_cartesian_velocity_interface_test.cpp  agimus_franka_cartesian_velocity_interface_test.hpp  agimus_franka_robot_model_test.cpp  agimus_franka_robot_model_test.hpp  agimus_franka_robot_state_test.cpp  agimus_franka_robot_state_test.hpp  agimus_franka_semantic_interface_test.cpp  agimus_franka_semantic_interface_test.hpp  robot_description_test.txt
agimus_integration_launch_testing/: CMakeLists.txt  package.xml
agimus_integration_launch_testing/test/: test_agimus_franka_gripper_position.py  test_move_to_start_example_controller.py
franka_bringup/: CMakeLists.txt  default.nix  package.xml
franka_example_controllers/: CMakeLists.txt  default.nix  package.xml
franka_fr3_moveit_config/: CMakeLists.txt  default.nix  package.xml
franka_gazebo/franka_gazebo_bringup/: CMakeLists.txt  package.xml
franka_gazebo/franka_ign_ros2_control/: CMakeLists.txt  default.nix  package.xml
franka_gazebo/franka_ign_ros2_control/include/ign_ros2_control/: ign_ros2_control_plugin.hpp  ign_system_interface.hpp
franka_gazebo/franka_ign_ros2_control/src/: ign_ros2_control_plugin.cpp  ign_system.cpp
franka_gripper/: CMakeLists.txt  default.nix  package.xml
franka_hardware/: CMakeLists.txt  default.nix  package.xml
franka_hardware/include/franka_hardware/: franka_action_server.hpp  franka_param_service_server.hpp  robot.hpp
franka_hardware/src/: franka_action_server.cpp  franka_param_service_server.cpp  robot.cpp
franka_hardware/test/: CMakeLists.txt  franka_action_server_test.cpp  franka_hardware_interface_test.cpp  test_utils.hpp
franka_msgs/: CMakeLists.txt  default.nix  package.xml
franka_robot_state_broadcaster/: CMakeLists.txt  default.nix  package.xml
franka_ros2/: CMakeLists.txt  package.xml
franka_semantic_components/: CMakeLists.txt  default.nix  package.xml
integration_launch_testing/: default.nix  package.xml
joint_trajectory_controller/: default.nix
(+62 files in other folders)
