<?xml version="1.0"?>
<package format="3">
  <name>agimus_franka_robot_state_broadcaster</name>
  <version>1.0.0</version>
  <description>fork of franka_robot_state_broadcaster for franka robots not maintained anymore by franka</description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>agimus_libfranka</depend>
  <depend>agimus_franka_msgs</depend>
  <depend>agimus_franka_hardware</depend>
  <depend>agimus_franka_semantic_components</depend>
  <depend>generate_parameter_library</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcutils</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>controller_manager</depend>
  <depend>visualization_msgs</depend>
  <depend>urdf</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
