<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agimus_franka_gazebo_bringup</name>
  <version>1.0.0</version>
  <description>fork of franka_gazebo_bringup for franka robots not maintained anymore by franka</description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>Apache-2.0</license>

  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>agimus_franka_description</depend>
  <depend>agimus_franka_ign_ros2_control</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2controlcli</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
